# memoir

./: Cargo.toml  README.md  database.sqlite
migrations/: 20240824173706_notes.sql
src/: main.rs  text_file.rs
